profilelist1exp/unpackaged/objects/Deal_Program__c.object
<CustomObject>
    <fields>
        <fullName>Partner_Relationships_Disti__c</fullName>
        <label>Disti/Reseller Partner Program Tier</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Authorized</fullName>
                </value>
                <value>
                    <fullName>Authorized Reseller</fullName>
                </value>
                <value>
                    <fullName>Business Client</fullName>
                </value>
                <value>
                    <fullName>Client products</fullName>
                </value>
                <value>
                    <fullName>Client Servers and Networking</fullName>
                </value>
                <value>
                    <fullName>Client Servers Storage and Networking</fullName>
                </value>
                <value>
                    <fullName>Consumer and Client</fullName>
                </value>
                <value>
                    <fullName>CSG Commercial Client</fullName>
                </value>
                <value>
                    <fullName>Display/Imaging</fullName>
                </value>
                <value>
                    <fullName>Displays</fullName>
                </value>
                <value>
                    <fullName>Federal Certified</fullName>
                </value>
                <value>
                    <fullName>Federal Certified - Premier</fullName>
                </value>
                <value>
                    <fullName>Federal Certified – Premier +</fullName>
                </value>
                <value>
                    <fullName>Federal Disty Managed</fullName>
                </value>
                <value>
                    <fullName>Federal GSA Authorized</fullName>
                </value>
                <value>
                    <fullName>Federal GSA Authorized -Premier</fullName>
                </value>
                <value>
                    <fullName>Federal GSA Authorized -Premier +</fullName>
                </value>
                <value>
                    <fullName>Federal Limited GSA Authorized</fullName>
                </value>
                <value>
                    <fullName>Federal Limited GSA Authorized - Premier</fullName>
                </value>
                <value>
                    <fullName>Federal Limited GSA Authorized - Premier +</fullName>
                </value>
                <value>
                    <fullName>Federal OEM</fullName>
                </value>
                <value>
                    <fullName>Federal OEM Distributor All Products</fullName>
                </value>
                <value>
                    <fullName>Federal OEM Systems Integrator</fullName>
                </value>
                <value>
                    <fullName>Federal Registered</fullName>
                </value>
                <value>
                    <fullName>Federal Services Reseller</fullName>
                </value>
                <value>
                    <fullName>Federal System Integrator</fullName>
                    <isActive>false</isActive>
                    <label>Federal System Integrator</label>
                </value>
                <value>
                    <fullName>Federal Systems Integrator</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Not Authorized</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Relationships__c</fullName>
        <label>Partner Program Tier</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Authorized</fullName>
                </value>
                <value>
                    <fullName>Authorized Reseller</fullName>
                </value>
                <value>
                    <fullName>Business Client</fullName>
                </value>
                <value>
                    <fullName>Client products</fullName>
                </value>
                <value>
                    <fullName>Client Servers and Networking</fullName>
                </value>
                <value>
                    <fullName>Client Servers Storage and Networking</fullName>
                </value>
                <value>
                    <fullName>Consumer and Client</fullName>
                </value>
                <value>
                    <fullName>CSG Commercial Client</fullName>
                </value>
                <value>
                    <fullName>Display/Imaging</fullName>
                </value>
                <value>
                    <fullName>Displays</fullName>
                </value>
                <value>
                    <fullName>Federal Certified</fullName>
                </value>
                <value>
                    <fullName>Federal Certified - Premier</fullName>
                </value>
                <value>
                    <fullName>Federal Certified – Premier +</fullName>
                </value>
                <value>
                    <fullName>Federal Disty Managed</fullName>
                </value>
                <value>
                    <fullName>Federal GSA Authorized</fullName>
                </value>
                <value>
                    <fullName>Federal GSA Authorized -Premier</fullName>
                </value>
                <value>
                    <fullName>Federal GSA Authorized -Premier +</fullName>
                </value>
                <value>
                    <fullName>Federal Limited GSA Authorized</fullName>
                </value>
                <value>
                    <fullName>Federal Limited GSA Authorized - Premier</fullName>
                </value>
                <value>
                    <fullName>Federal Limited GSA Authorized - Premier +</fullName>
                </value>
                <value>
                    <fullName>Federal OEM</fullName>
                </value>
                <value>
                    <fullName>Federal OEM Distributor All Products</fullName>
                </value>
                <value>
                    <fullName>Federal OEM Systems Integrator</fullName>
                </value>
                <value>
                    <fullName>Federal Registered</fullName>
                </value>
                <value>
                    <fullName>Federal Services Reseller</fullName>
                </value>
                <value>
                    <fullName>Federal Systems Integrator</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Not Authorized</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Preferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Tiers_Disti__c</fullName>
        <label>Disti/Reseller Purchase Path</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Partner Purchase</fullName>
                </value>
                <value>
                    <fullName>Indirect Partner Purchase</fullName>
                </value>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Tiers__c</fullName>
        <label>Purchase Path</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Partner Purchase</fullName>
                </value>
                <value>
                    <fullName>Indirect Partner Purchase</fullName>
                </value>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Type_Disti__c</fullName>
        <label>Disti/Reseller Partner Program Track</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alliance</fullName>
                </value>
                <value>
                    <fullName>Cloud Service Provider</fullName>
                </value>
                <value>
                    <fullName>Commercial Distributor</fullName>
                </value>
                <value>
                    <fullName>Commercial General</fullName>
                </value>
                <value>
                    <fullName>Commercial LE Partner</fullName>
                </value>
                <value>
                    <fullName>Commercial Public Partner</fullName>
                </value>
                <value>
                    <fullName>Commercial SMB Partner</fullName>
                </value>
                <value>
                    <fullName>Consumer Distributor</fullName>
                </value>
                <value>
                    <fullName>Consumer Partner</fullName>
                </value>
                <value>
                    <fullName>Consumer Reseller (GDC)</fullName>
                </value>
                <value>
                    <fullName>Consumer Retailer (GDC)</fullName>
                </value>
                <value>
                    <fullName>Dell.com Retail (Kiosks)</fullName>
                </value>
                <value>
                    <fullName>Distributor (GCC)</fullName>
                </value>
                <value>
                    <fullName>Distributor (GDC)</fullName>
                </value>
                <value>
                    <fullName>Distributor (Shared)</fullName>
                </value>
                <value>
                    <fullName>Federal Cloud Service Provider</fullName>
                </value>
                <value>
                    <fullName>Federal Distributor</fullName>
                </value>
                <value>
                    <fullName>Federal OEM</fullName>
                </value>
                <value>
                    <fullName>Federal OEM Distributor</fullName>
                </value>
                <value>
                    <fullName>Federal OEM Solution Provider</fullName>
                </value>
                <value>
                    <fullName>Federal OEM Systems Integrator</fullName>
                </value>
                <value>
                    <fullName>Federal Solution Provider</fullName>
                </value>
                <value>
                    <fullName>Federal Systems Integrator</fullName>
                </value>
                <value>
                    <fullName>GICS</fullName>
                </value>
                <value>
                    <fullName>Global Alliance</fullName>
                </value>
                <value>
                    <fullName>IIG (not a registered partner)</fullName>
                </value>
                <value>
                    <fullName>Infrastructure supplier (Network, Telecom etc)</fullName>
                </value>
                <value>
                    <fullName>ISG</fullName>
                </value>
                <value>
                    <fullName>Major Retail</fullName>
                </value>
                <value>
                    <fullName>Managed Service Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Program Track</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alliance</fullName>
                </value>
                <value>
                    <fullName>Cloud Service Provider</fullName>
                </value>
                <value>
                    <fullName>Commercial Distributor</fullName>
                </value>
                <value>
                    <fullName>Commercial  General</fullName>
                </value>
                <value>
                    <fullName>Commercial LE Partner</fullName>
                </value>
                <value>
                    <fullName>Commercial Public Partner</fullName>
                </value>
                <value>
                    <fullName>Commercial SMB Partner</fullName>
                </value>
                <value>
                    <fullName>Consumer Distributor</fullName>
                </value>
                <value>
                    <fullName>Consumer Partner</fullName>
                </value>
                <value>
                    <fullName>Consumer Reseller (GDC)</fullName>
                </value>
                <value>
                    <fullName>Consumer Retailer (GDC)</fullName>
                </value>
                <value>
                    <fullName>Dell.com Retail (Kiosks)</fullName>
                </value>
                <value>
                    <fullName>Distributor (GCC)</fullName>
                </value>
                <value>
                    <fullName>Distributor (GDC)</fullName>
                </value>
                <value>
                    <fullName>Distributor (Shared)</fullName>
                </value>
                <value>
                    <fullName>Federal Cloud Service Provider</fullName>
                </value>
                <value>
                    <fullName>Federal Distributor</fullName>
                </value>
                <value>
                    <fullName>Federal OEM</fullName>
                </value>
                <value>
                    <fullName>Federal OEM Distributor</fullName>
                </value>
                <value>
                    <fullName>Federal OEM Solution Provider</fullName>
                </value>
                <value>
                    <fullName>Federal OEM Systems Integrator</fullName>
                </value>
                <value>
                    <fullName>Federal Solution Provider</fullName>
                </value>
                <value>
                    <fullName>Federal Systems Integrator</fullName>
                </value>
                <value>
                    <fullName>GICS</fullName>
                </value>
                <value>
                    <fullName>Global Alliance</fullName>
                </value>
                <value>
                    <fullName>IIG (not a registered partner)</fullName>
                </value>
                <value>
                    <fullName>Infrastructure supplier (Network, Telecom etc)</fullName>
                </value>
                <value>
                    <fullName>ISG</fullName>
                </value>
                <value>
                    <fullName>Major Retail</fullName>
                </value>
                <value>
                    <fullName>Managed Service Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Country__c</fullName>
        <label>Program Country(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Program_Region__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Ã?LAND ISLANDS</fullName>
                </value>
                <value>
                    <fullName>Abu Dhabi</fullName>
                </value>
                <value>
                    <fullName>Admiralty Islands</fullName>
                </value>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>Ajman</fullName>
                </value>
                <value>
                    <fullName>Al Ain</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>Ascension Island</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Region__c</fullName>
        <label>Program Region(s)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GLOBAL</fullName>
                </value>
                <value>
                    <fullName>APJ;EMEA;LATAM</fullName>
                </value>
                <value>
                    <fullName>APJ;LATAM;NA</fullName>
                </value>
                <value>
                    <fullName>APJ;EMEA;NA</fullName>
                </value>
                <value>
                    <fullName>EMEA;LATAM;NA</fullName>
                </value>
                <value>
                    <fullName>APJ;LATAM</fullName>
                </value>
                <value>
                    <fullName>APJ;EMEA</fullName>
                </value>
                <value>
                    <fullName>APJ;NA</fullName>
                </value>
                <value>
                    <fullName>EMEA;LATAM</fullName>
                </value>
                <value>
                    <fullName>EMEA;NA</fullName>
                </value>
                <value>
                    <fullName>LATAM;NA</fullName>
                </value>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Requester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deal_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <label>Program Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Motion__c</fullName>
        <description>This is used to display in layout as per the story #6410615</description>
        <label>Sales Motion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Resell</fullName>
                </value>
                <value>
                    <fullName>Sell In</fullName>
                </value>
                <value>
                    <fullName>Sell Out Dedicated</fullName>
                </value>
                <value>
                    <fullName>Stock and Sell</fullName>
                </value>
                <value>
                    <fullName>Back to Back</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stack_Ranking__c</fullName>
        <inlineHelpText>Stack Rank value represents this program’s weight against all ‘active’ channel programs.  If multiple eligible programs, the highest Stack Rank takes precedence. Review all programs to determine weight.</inlineHelpText>
        <label>Stack Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stackable__c</fullName>
        <label>Stackable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Storage_Partner_Tiers__c</fullName>
        <label>Specialty Product Purchase Path</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage_Partner_Tiers_disti__c</fullName>
        <label>Disti/Reseller Spl. Prod Purc Path</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                    <isActive>false</isActive>
                    <label>Indirect</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Threshold_Total_Expected_Revenue_USD__c</fullName>
        <formula>CASE( CurrencyIsoCode, 
&quot;AUD&quot;, USD_Threshold__c/VALUE($Label.Currency_Rate_AUD), 
&quot;BRL&quot;, USD_Threshold__c/VALUE($Label.Currency_Rate_BRL), 
&quot;CAD&quot;, USD_Threshold__c/VALUE($Label.Currency_Rate_CAD), 
&quot;CHF&quot;, USD_Threshold__c/VALUE($Label.Currency_Rate_CHF), 
&quot;CNY&quot;, USD_Threshold__c/VALUE($Label.Currency_Rate_CNY), 
&quot;DKK&quot;, USD_Threshold__c/VALUE($Label.Currency_Rate_DKK), 
&quot;EUR&quot;, USD_Threshold__c/VALUE($Label.Currency_Rate_EUR), 
&quot;GBP&quot;, USD_Threshold__c/VALUE($Label.Currency_Rate_GBP), 
&quot;HKD&quot;, USD_Threshold__c/VALUE($Label.Currency_Rate_HKD), 
&quot;INR&quot;, USD_Threshold__c/VALUE($Label.Currency_Rate_INR), 
&quot;JPY&quot;, USD_Threshold__c/VALUE($Label.Currency_Rate_JPY), 
&quot;KRW&quot;, USD_Threshold__c/VALUE($Label.Currency_Rate_KRW), 
&quot;MYR&quot;, USD_Threshold__c/VALUE($Label.Currency_Rate_MYR), 
&quot;MXN&quot;, USD_Threshold__c/VALUE($Label.Currency_Rate_MXN), 
&quot;NOK&quot;, USD_Threshold__c/VALUE($Label.Currency_Rate_NOK), 
&quot;NZD&quot;, USD_Threshold__c/VALUE($Label.Currency_Rate_NZD), 
&quot;RUB&quot;, USD_Threshold__c/VALUE($Label.Currency_Rate_RUB), 
&quot;SEK&quot;, USD_Threshold__c/VALUE($Label.Currency_Rate_SEK), 
&quot;SGD&quot;, USD_Threshold__c/VALUE($Label.Currency_Rate_SGD), 
&quot;THB&quot;, USD_Threshold__c/VALUE($Label.Currency_Rate_THB), 
&quot;TWD&quot;, USD_Threshold__c/VALUE($Label.Currency_Rate_TWD), 
&quot;ZAR&quot;, USD_Threshold__c/VALUE($Label.Currency_Rate_ZAR), 
&quot;AED&quot;, USD_Threshold__c/VALUE($Label.Currency_Rate_AED), 
&quot;IDR&quot;, USD_Threshold__c/VALUE($Label.Currency_Rate_IDR), 
&quot;MAD&quot;, USD_Threshold__c/VALUE($Label.Currency_Rate_MAD), 
&quot;PHP&quot;, USD_Threshold__c/VALUE($Label.Currency_Rate_PHP), 
&quot;PLN&quot;, USD_Threshold__c/VALUE($Label.Currency_Rate_PLN), 
&quot;HUF&quot;, USD_Threshold__c/VALUE($Label.Currency_Rate_HUF), 
&quot;UAH&quot;, USD_Threshold__c/VALUE($Label.Currency_Rate_UAH), 
&quot;ILS&quot;, USD_Threshold__c/VALUE($Label.Currency_Rate_ILS), 
&quot;SAR&quot;, USD_Threshold__c/VALUE($Label.Currency_Rate_SAR), 
&quot;TRY&quot;, USD_Threshold__c/VALUE($Label.Currency_Rate_TRY), 
&quot;QAR&quot;, USD_Threshold__c/VALUE($Label.Currency_Rate_QAR), 
USD_Threshold__c/ 1 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Threshold(Total Expected Revenue USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USD_Threshold__c</fullName>
        <inlineHelpText>Enter Revenue in local Currency</inlineHelpText>
        <label>Threshold(Total Expected Revenue)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <description>This is used to displayed in layout as per the story #6410615</description>
        <label>Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Zone 1</fullName>
                </value>
                <value>
                    <fullName>Zone 2</fullName>
                </value>
                <value>
                    <fullName>Zone 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Channel Program</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Deal_Program_Name__c</columns>
        <columns>Stack_Ranking__c</columns>
        <columns>Deal_Type__c</columns>
        <columns>Deal_Program_Description__c</columns>
        <columns>Active__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Program_Region__c</columns>
        <columns>Program_Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All2</fullName>
        <columns>NAME</columns>
        <columns>Deal_Program_Name__c</columns>
        <columns>Stack_Ranking__c</columns>
        <columns>Deal_Type__c</columns>
        <columns>Deal_Program_Description__c</columns>
        <columns>Active__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Program_Region__c</columns>
        <columns>Program_Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CP-{000000}</displayFormat>
        <label>Program ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Channel Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Date_Error</fullName>
        <active>true</active>
        <description>Start date should be greater than End date.</description>
        <errorConditionFormula>Start_Date__c &gt;= End_Date__c</errorConditionFormula>
        <errorMessage>StartDate should be less than EndDate</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DeActivate_Validation_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND((End_Date__c&lt;Today()), Active__c == true)</errorConditionFormula>
        <errorMessage>Please Change the End Date to Future and Activate</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Display_Error_Message_Program_is_Active</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISCLONE(),ISNEW(),ISCHANGED(Active__c), ISCHANGED( Start_Date__c)), Active__c = TRUE, 
Start_Date__c &lt; TODAY())</errorConditionFormula>
        <errorMessage>Change the Start Date to Today&apos;s date before making the program active.</errorMessage>
    </validationRules>
</CustomObject>